Adds 2022 SBGames article

--- a/papers/citations/andrade2019real.bib
+++ b/papers/citations/andrade2019real.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{8924841,
+@inproceedings{andrade2019realtime,
   author={Andrade, Cassiano and Silva, Ismael and Barbosa, Glívia and Coutinho, Flávio},
   booktitle={2019 18th Brazilian Symposium on Computer Games and Digital Entertainment (SBGames)}, 
   title={Real-Time Motion Detection for Android Smartphones}, 
@@ -6,5 +6,5 @@
   volume={},
   number={},
   pages={154-162},
-  doi={10.1109/SBGames.2019.00029}}
-  
+  doi={10.1109/SBGames.2019.00029}
+}
